--- a/index.html
+++ b/index.html
@@ -8,7 +8,197 @@
   </head>
   <body>
 
-    <h1>hello world</h1>
+<!-- Header -->
+    <header>
+      <div class="navcontent flex-container">
+        <a href="index.html" class="desktop logo"><img src="resources/images/ic-logo.svg" alt="logo">COLMAR<span>ACADEMY</span></a>
+        <nav class="desktop">
+          <ul>
+            <li><a href="#">On Campus</a></li>
+            <li><a href="#">Online</a></li>
+            <li><a href="#">For companies</a></li>
+            <li><a href="#">Sign in</a></li>
+          </ul>
+        </nav>
+        <!-- <nav class="mobile">
+          <ul>
+            <li><a href="#"><img src="./resources/images/ic-logo.svg"></a></li>
+            <li><a href="#"><img src="./resources/images/ic-product-detail.svg"></a></li>
+            <li><a href="#"><img src="./resources/images/ic-about-us.svg"></a></li>
+            <li><a href="#" class="button">Join us</a></li>
+          </ul>
+        </nav> -->
+      </div>
+    </header>
+
+
+
+
+  <div class="main-content"> <!-- Main Body Content Sections -->
+
+<!-- Banner Section -->
+    <div id="banner" class="content flex-container">
+      <div class="image-container">
+          <img src="resources/images/banner.jpg" />
+      </div>
+      <div class="headline">
+        <h2>Learn something new everyday</h2>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+        <div class="button">Start here</div>
+      </div>
+    </div>
+
+<!-- Articles Section -->
+    <div id="articles" class="content flex-container">
+      <div class="main-column">
+        <div class="article">
+          <div class="image-container">
+            <img src="resources/images/banner.jpg" />
+          </div>
+          <h2>It doesn't hurt to keep practicing</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <span>Emanuel, Sr Strategist at Hiring.com</span>
+        </div>
+      </div>
+      <div class="second-column">
+        <div class="information">
+          <div class="image-container">
+            <img src="resources/images/banner.jpg" />
+          </div>
+          <h2>It doesn't hurt to keep practicing</h2>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a href="#">Read more</a>
+        </div>
+        <div class="information">
+          <div class="image-container">
+            <img src="resources/images/banner.jpg" />
+          </div>
+          <h2>It doesn't hurt to keep practicing</h2>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a href="#">Read more</a>
+        </div>
+        <div class="information">
+          <div class="image-container">
+            <img src="resources/images/banner.jpg" />
+          </div>
+          <h2>It doesn't hurt to keep practicing</h2>
+          <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+          <a href="#">Read more</a>
+        </div>
+      </div>
+
+    </div>
+
+<!-- Start Learning Section -->
+    <div id="learning" class="content">
+      <div class="sectionhead">
+          <h1>Start learning</h1>
+        </div>
+      <div class="flex-container">
+        <div class="courses">
+              <div class="course">
+                <div class="image-container">
+                  <img src="resources/images/thesis-fisma.jpg" />
+                </div>
+                <h2>Fisma: Design and</h2>
+                <p>COURSES</p>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+              <div class="course">
+                <div class="image-container">
+                  <img src="resources/images/thesis-fisma.jpg" />
+                </div>
+                <h2>Fisma: Design and</h2>
+                <p>COURSES</p>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+              <div class="course">
+                <div class="image-container">
+                  <img src="resources/images/thesis-fisma.jpg" />
+                </div>
+                <h2>Fisma: Design and</h2>
+                <p>COURSES</p>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+              <div class="course">
+                <div class="image-container">
+                  <img src="resources/images/thesis-fisma.jpg" />
+                </div>
+                <h2>Fisma: Design and</h2>
+                <p>COURSES</p>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+              <div class="course">
+                <div class="image-container">
+                  <img src="resources/images/thesis-fisma.jpg" />
+                </div>
+                <h2>Fisma: Design and</h2>
+                <p>COURSES</p>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+              <div class="course">
+                <div class="image-container">
+                  <img src="resources/images/thesis-fisma.jpg" />
+                </div>
+                <h2>Fisma: Design and</h2>
+                <p>COURSES</p>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+            </div>
+      </div>
+    </div>
+
+    <!-- Thesis Section -->
+
+    <div id="thesis" class="content">
+      <div class="sectionhead">
+          <h1>Thesis exhibit</h1>
+        </div>
+      <div class="flex-container">
+        <div class="video-container">
+              <video src="resources/videos/thesis.mp4" type="video/mp4" controls> Video not supported
+              </video>
+            </div>
+        <div class="exhibits">
+              <div class="exhibit">
+                <div class="image-container">
+                  <img src="resources/images/thesis-fisma.jpg" />
+                </div>
+                <h2>Fisma: Design and</h2>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+              <div class="exhibit">
+                <div class="image-container">
+                  <img src="resources/images/thesis-fisma.jpg" />
+                </div>
+                <h2>Fisma: Design and</h2>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+            </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+<!-- Footer -->
+    <footer>
+      <div class="content">
+        <span class="copyright">&copy; 2016  Colmar Academy. All Rights Reserved</span>
+        <span class="location">Designed in NYC</span>
+        <ul>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+      </div>
+    </footer>
+
+  </div>  <!-- End Main Content Div -->
 
   </body>
 </html>
